<resources>
    <string name="auth_accept_cert">Accept untrusted certificate?</string>
    <string name="auth_error_network">Unable to authenticate: network error (%1$s)</string>
    <string name="auth_error_network_nodetails">Unable to authenticate: network error</string>
    <string name="auth_error_json">Unable to authenticate: JSON parse error (server did not reply with expected response)</string>
    <string name="auth_error_response">Unable to authenticate: empty response from server</string>
    <string name="app_name">MyMine</string>
    <string name="about_version">MyMine version %1$s, built on %2$s</string>
    <string name="alert_alpha">
        This app is in ALPHA development phase. This means that the app is not meant to be used in a
        production mode. This also means that the app is slower than it will be. You can not expect it to work. You can not
        blame it for crashing. It WILL crash.\n\nEverything will be fixed. All the bugs will be removed. All you have to do is
        wait for the next update for your bug to be fixed.\n\nYou do not need to put a 1-star rating ;)\nThe dev team is
        monitoring all crash reports and a great care will be taken to ensure that ALL the bugs are fixed.\n\nHappy testing,
        and send an email if you want a new feature! :-)
    </string>
    <string name="alert_alpha_title">Alpha version warning</string>
    <string name="alpha_ok">Fair enough!</string>
    <string name="alpha_ko">Nah.</string>
    <string name="alert_010_upgrade_title">Oops. Sync again!</string>
    <string name="alert_010_upgrade">
        Wow, we\'re sorry. There was an unplanned modification in the internals of the app, and we had to delete wiki pages
        from the phone cache. Please, trigger a manual sync or wait for the next sync to come before you use the Wiki!\n\nBut
        worry not, your wiki pages are SAFE! It\'s just the local copy on this phone that got corrupted.
    </string>
    <string name="upgrade_010_ok">Thanks for the warning</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_normal">Please wait just a little bit while we setup everything!</string>
    <string name="loading_sync">
        Your server has been set up, and we are now waiting for synchronization to come. This can take a
        while if there is a lot of activity on that server. You can check the sync progress in the Android Settings (have a
        look at the accounts and sync section).\n\nIt shouldn\'t be long, it usually takes a minute or two. Time for a
        coffee!
        ;)
    </string>
    <string name="loading_sync_check_button">Check sync settings</string>
    <string name="loading_sync_title">Coffee break!</string>
    <string name="no_projects">The project list is empty</string>
    <string name="help_text">
        In order to use this app, you need to setup the server connection. To do that, just add a new
         <b>Redmine Server</b>
        account in your phone settings!\n\nYep, it is THAT easy. All the sync will be managed directly by your phone settings,
        and you will control exactly what you want to sync on which server.
    </string>
    <string name="title_projects">Projects</string>
    <string name="title_wiki_pages">Wiki Pages</string>
    <string name="title_issues">Issues</string>
    <string name="sync_account_type">Redmine Server</string>
    <string name="sync_issues">Issues (and their statuses, priorities, etc.)</string>
    <string name="sync_projects">Projects (and their versions, etc.)</string>
    <string name="sync_wiki">Wiki pages</string>
    <string name="sync_users">Users</string>
    <string name="sync_settings_title">Account Settings</string>
    <string name="sync_settings_summary">Sync frequency, notifications, etc.</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_issues">Issues</string>
    <string name="menu_wiki">Wiki</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="no_wiki_pages">This project doesn\'t have any wiki page.</string>
    <string name="not_applicable">N/A</string>
    <string name="overview_card_issues_count_myself">assigned to you</string>
    <string name="overview_card_issues_count_all">on all combined servers</string>
    <string name="overview_card_issues_title">Issues</string>
    <string name="overview_card_issues_subtitle"
            formatted="false">{0,choice,0#There is no issue %s|1#There is only one issue %s|1&lt;There are {0} issues %s}
    </string>
    <string name="overview_card_projects_title">Projects</string>
    <string name="overview_card_projects_subtitle">{0,choice,0#There is no synced project yet. Have you set up an account?|1#You are following one project|1&lt;You
        are following {0} projects}
    </string>
    <string name="overview_card_projects_action">See projects</string>
    <string name="overview_card_projects_see_roadmaps">See roadmaps</string>
    <string name="overview_card_projects_see_wiki">Show wiki pages</string>
    <string name="overview_card_servers_title">Redmine Servers</string>
    <string name="overview_card_servers_subtitle">{0,choice,0#There is no synced server yet. Have you set up an account?|1#One server is synced with this app|1&lt;{0}
        servers are synced with this app}
    </string>
    <string name="overview_card_servers_sync">Manage servers and sync</string>
    <string name="overview_card_servers_add">Add new server</string>
    <string name="issue_listview_target_version">Ver: %1$s</string>
    <string name="issue_id">ID</string>
    <string name="issue_project">Project</string>
    <string name="issue_tracker">Tracker</string>
    <string name="issue_author">Author</string>
    <string name="issue_subject">Subject</string>
    <string name="issue_status">Status</string>
    <string name="issue_creation_date">Creation date</string>
    <string name="issue_update_date">Update date</string>
    <string name="issue_priority">Priority</string>
    <string name="issue_assignee">Assignee</string>
    <string name="issue_category">Category</string>
    <string name="issue_target_version">Target version</string>
    <string name="issue_start_date">Start date</string>
    <string name="issue_due_date">Due date</string>
    <string name="issue_percent_done">% Done</string>
    <string name="issue_spent_time">Spent time</string>
    <string name="issue_description">Description</string>
    <string name="issue_version_na">Ver: none</string>
    <string name="issue_status_na">N/A</string>
    <string name="issue_estimated_hours">Estimated hours</string>
    <string name="issue_parent">Parent</string>
    <string name="issue_parent_format"><![CDATA[Parent issue: <a href="#">#%1$d</a>]]></string>
    <string name="issue_is_private">Private</string>
    <string name="issue_tracker_id_format">%1$s #%2$d</string>
    <string name="issue_spent_time_format">%1$.2f hrs</string>
    <string name="issue_author_name_format">%1$s added %2$s</string>
    <string name="issue_author_name_updated_format">%1$s added %2$s;\nupdated %3$s</string>
    <string name="issue_author_name_toast_format">added %1$s</string>
    <string name="issue_author_name_updated_toast_format">added %1$s;\nupdated %2$s</string>
    <string name="issue_filter_all">ALL</string>
    <string name="issue_filter_queries">Queries</string>
    <string name="issue_filter_projects">Projects</string>
    <string name="issue_overview_title">Overview</string>
    <string name="issue_journal_title">Journal</string>
    <string name="issue_revisions_title">Revisions</string>
    <string name="issue_attachments_title">Attachments</string>
    <string name="issue_history_none">Nothing</string>
    <string name="issue_journal_cant_download">Can\'t download, please check your Internet connection</string>
    <string name="issue_journal_unknown_property">Property \'%1$s\'</string>
    <string name="issue_journal_property_changed_to"><![CDATA[<b>%1$s</b> changed to <i>%2$s</i>]]></string>
    <string name="issue_journal_property_changed_fromto"><![CDATA[<b>%1$s</b> changed from <s><i>%2$s</i></s> to <i>%3$s</i>]]></string>
    <string name="issue_journal_property_deleted"><![CDATA[<b>%1$s</b> deleted (was <i>%2$s</i>)]]></string>
    <string name="issue_journal_attachment_added"><![CDATA[Attachment <a href="%1$s">%2$s</a> added]]></string>
    <string name="issue_journal_value_na">N/A</string>
    <string name="issue_journal_user_anonymous">Anonymous</string>
    <string name="issue_changeset_revision">Revision: %1$s</string>
    <string name="issue_attachment_filename_size">%1$s (%2$s)</string>
    <string name="issue_menu_open_browser">Open in browser</string>
    <string name="issues_menu_search">Search issues&#8230;</string>
    <string name="issues_menu_refresh">Refresh issues</string>
    <string name="issues_search_hint">Search Redmine issues&#8230;</string>
    <string name="issues_ordering">Order the issues list by:</string>
    <string name="issues_menu_ordering">Order issues&#8230;</string>
    <string name="issues_ordering_asc">ASC</string>
    <string name="issues_ordering_desc">DESC</string>
    <string name="issues_ordering_then">then&#8230;</string>
    <string name="issues_list_empty">The issues list is empty</string>
    <string name="issues_list_empty_search">This search returned no result</string>
    <string name="issue_add_server_project_picker_dialog_title">Please select the target server and project</string>
    <string name="issue_add_server_picker_dialog_title">Please select the target server</string>
    <string name="issue_edit_field_unset">Tap to set</string>
    <string name="issue_edit_edit_description_button">Edit description</string>
    <string name="issue_edit_notes">Notes</string>
    <string name="issue_edit_description_dialog_title">Edit issue description</string>
    <string name="issue_edit_subject_hint">Enter issue subject</string>
    <string name="issue_edit_select_assignee_button">Pick</string>
    <string name="issue_edit_spinner_no_change"><![CDATA[<none>]]></string>
    <string name="issue_edit_estimated_hours_parse_error">Couldn\'t parse the number of hours, please enter it as HH or HH:MM or HH:MM:SS</string>
    <string name="issue_edit_notes_hint">Type your notes about this issue here</string>
    <string name="issue_edit_description_hint">Enter the issue description here</string>
    <string name="issue_edit_project_instructions">Please select the target project</string>
    <string name="issue_delete_confirm_dialog">Are you sure you want to delete this issue? This cannot be undone.</string>
    <string name="issue_delete_confirmed">The issue was deleted.</string>
    <string name="issue_deleted_from_server">This issue was deleted on the server</string>
    <string name="menu_issues_add">Add new issue</string>
    <string name="issue_menu_edit">Edit issue</string>
    <string name="menu_issue_upload_attn">Upload attachment</string>
    <string name="menu_issue_delete">Delete issue</string>
    <string name="project_created_on">
        <b>Created on</b>
        : %1$s
    </string>
    <string name="project_updated_on">
        <b>Updated on</b>
        : %1$s
    </string>
    <string name="project_server">
        <b>Redmine server</b>
        : %1$s
    </string>
    <string name="project_parent">
        <b>Parent project</b>
        : %1$s
    </string>
    <string name="setup_welcome">Welcome!</string>
    <string name="setup_server">What\'s your server URL?</string>
    <string name="setup_apikey">What\'s your API key?</string>
    <string name="setup_apikey_help">Where can I get my API key?</string>
    <string name="setup_button">Let\'s go!</string>
    <string name="setup_notice">
        Notice: you can use this app only with a REST-enabled Redmine server. We will not ask for your
        username or password.
    </string>
</resources>