<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/main_vertical_margin"
        android:layout_marginBottom="@dimen/main_vertical_margin"
        android:layout_marginLeft="@dimen/dialog_like_horizontal_margin"
        android:layout_marginRight="@dimen/dialog_like_horizontal_margin">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:padding="8dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

        <net.bicou.redmine.widget.RobotoThinTextView
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setup_welcome"
                android:textStyle="bold|italic"
                android:textSize="36sp"
                android:textAppearance="@android:style/TextAppearance.Large"/>

        <View
                android:layout_width="wrap_content"
                android:layout_height="25dp"/>

        <EditText
                android:id="@+id/setup_server_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/setup_server"
                android:inputType="textUri"
                android:singleLine="true"
                >

            <requestFocus/>
        </EditText>

        <View
                android:layout_width="wrap_content"
                android:layout_height="25dp"/>

        <EditText
                android:id="@+id/setup_api_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/setup_apikey"
                android:inputType="textNoSuggestions"/>

        <TextView
                android:id="@+id/setup_apikey_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="#000099"
                android:textStyle="italic"
                android:textSize="14sp"
                android:text="@string/setup_apikey_help"/>

        <LinearLayout
                android:id="@+id/setup_crouton_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <View
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

        <Button
                android:id="@+id/setup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:minWidth="100dp"
                android:text="@string/setup_button"/>

        <View
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setup_notice"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

</ScrollView>
