<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:staggered="http://schemas.android.com/apk/res-auto"
        android:background="@color/white_layout_background"
        android:padding="@dimen/main_content_padding"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <net.bicou.redmine.widget.RobotoThinTextView
                android:id="@+id/project_overview_title"
                android:text="@string/issue_project"
                android:textSize="@dimen/title_font_size"
                android:gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/project_overview_is_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:button="@drawable/favorite"/>

    </RelativeLayout>

    <TextView
            android:id="@+id/project_overview_short_description"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"/>

    <RelativeLayout
            android:id="@+id/project_overview_full_description"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <TextView
                android:id="@+id/project_overview_server"
                android:text="@string/project_server"
                android:gravity="center_vertical"
                android:textColor="#666666"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/arrow_up_float"/>

        <TextView
                android:id="@+id/project_overview_parent"
                android:text="@string/project_parent"
                android:gravity="center_vertical"
                android:textColor="#666666"
                android:padding="12dp"
                android:layout_below="@id/project_overview_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/project_overview_created_on"
                android:text="@string/project_created_on"
                android:gravity="center_vertical"
                android:textColor="#666666"
                android:padding="12dp"
                android:layout_below="@id/project_overview_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/project_overview_updated_on"
                android:text="@string/project_updated_on"
                android:gravity="center_vertical"
                android:textColor="#666666"
                android:padding="12dp"
                android:layout_below="@id/project_overview_created_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/project_overview_description"
                android:text="project description"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:padding="12dp"
                android:layout_below="@id/project_overview_updated_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"/>
    </RelativeLayout>

    <com.origamilabs.library.views.StaggeredGridView
            android:id="@+id/project_overview_container"
            staggered:numColumns="@integer/project_overview_num_columns"
            staggered:drawSelectorOnTop="true"
            staggered:itemMargin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>
